
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u8 ;


 int BUFFSZ ;
 int avp3_crc (int *,int) ;
 int exit (int) ;
 int printf (char*,int) ;
 int putxx (int *,int,int) ;
 int send (int,int *,int,int ) ;

int avp3_send(int sd, int type, u8 *data, int len) {
    u8 tmp[8];

    if(len > BUFFSZ) {
        printf("\nError: data too big (0x%x)\n", len);
        exit(1);
    }
    putxx(tmp, type, 16);
    putxx(tmp + 2, len, 16);
    putxx(tmp + 4, avp3_crc(data, len), 32);
    if(send(sd, tmp, 8, 0) != 8) return(-1);
    if(send(sd, data, len, 0) != len) return(-1);
    return(0);
}
